--- a/wp-content/themes/twentyelevenumco/style.css
+++ b/wp-content/themes/twentyelevenumco/style.css
@@ -89,7 +89,7 @@ h5{
 
 #access{
     position: fixed;
-    background: rgb(139, 183, 62);
+    background: #8bb73e;
     border-bottom: #FFFFFF 1px solid;
     box-shadow: 0px 4px 40px rgba(0,0,0,0.50);
     z-index: 10;
@@ -113,7 +113,7 @@ h5{
 #access ul ul :hover > a,
 #access a:focus {
     color: black;
-    background: rgb(211,211,211,0);
+    background: rgb(211, 211, 211,0);
     
 }
 
@@ -471,7 +471,7 @@ h5{
        *   Barre de navigation
        */
        #access ul{
-           margin: 0 5%;
+           margin: 0 -7%;
        }
        #branding #logo{
            left: 4%;
@@ -482,6 +482,19 @@ h5{
        }
    }
    
+/*
+*           Partie responsive pour tablette 
+*/
+
+@media screen and (max-width: 1284px) and (min-width: 770px){
+
+    .menu-menu-1-container{
+        display: none;
+    }
+    #barre-tablette{
+        background: #8BB73E;
+    }
+}
 
 /*
 *           Partie responsive pour mobile
@@ -541,16 +554,7 @@ h5{
         */
 
         #access #logo{   /* Logo du site */
-            position: absolute;
-            top: 5%;
-            left: 14%;
-            width: 125px;
-        }
-
-        #barre-mobile{ /* La barre de navigation mobile */
-            height: 35px;
-            background: #8BB73E;
-            border-bottom: #ffffff 1px solid;
+            display: none;
         }
 
         #container-contact{
@@ -558,6 +562,9 @@ h5{
         }
         
        #barre-principale{
+           display: none;
+       }
+       #barre-tablette{
            display: none;
        }
 
@@ -568,7 +575,7 @@ h5{
            background: rgba(139, 183, 62, .9);
            color: white;
            top: 0;
-           left: -90px;
+           left: -17%;
            overflow:auto;
        }
     
