--- a/wp-content/themes/twentyelevenumco/style.css
+++ b/wp-content/themes/twentyelevenumco/style.css
@@ -51,9 +51,6 @@ h5{
 }
 
 
-.singular .entry-title{
-    font-size: 45px;
-}
 .singular .entry-content{
     width: 80%;
 }
@@ -463,7 +460,7 @@ h5{
 
 
 
-/*------------------------------------------------Media Queries------------------------------------------*/
+/*---------------------------------------------------------------------         Media Queries       --------------------------------------------------------------------------------*/
 /* Quand l'écran descend à 1640px de large*/
 
 @media screen and (max-width: 1640px){
@@ -523,13 +520,14 @@ h5{
         */
 
         .entry-content h2{
-            font-size: 20px;
-            margin-bottom: 40px;
+            font-size: 27px;
+            margin-bottom: 80px;
         }
 
         .singular .entry-title{
-            line-height: 20px;
-            font-size: 19px;
+            line-height: 35px;
+            font-size: 30px;
+            padding-bottom: 35px;
         }
         .entry-content h3{
             font-size: 20px;
@@ -581,12 +579,18 @@ h5{
     
     
        #toggle { /* Icon pour la barre de navigation mobile */
+           display: flex;
            float: right;
            position: fixed;
            top: 10px;
            right: 5px;
            width: 28px;
-           height: 24px;     
+           height: 24px;   
+           background: #ffffff;
+           box-shadow: 0px 0px 28px 19px rgba(255,255,255,1);
+       }
+       #toggle img{
+           margin: auto;
        }
     
        .nav-menu li { 
@@ -609,7 +613,8 @@ h5{
        *    Titre du site
        */ 
        #titre-container{
-           width: 80%;
+           width: 70%;
+           height: 40%;
        }
        #site-title{
            line-height: 33px;
@@ -722,4 +727,17 @@ h5{
             border-left: none;
             border-top: #FFFFFF 1px solid;
         }
+
+        /*
+        *       Barre cookies
+        */
+
+        #cookies {
+            background:#8bb73e;
+            position: fixed;
+            bottom:0;
+         }
+         #cookies button {
+            background: #ffffff;
+         }
    } 
