--- a/wp-content/themes/twentyelevenumco/style.css
+++ b/wp-content/themes/twentyelevenumco/style.css
@@ -7,8 +7,7 @@ Template: twentyeleven
 Version: 0.1.0
 */
 @import url('https://fonts.googleapis.com/css?family=Exo');
-
-/*----------------------------------------------------Attributs global--------------------------------------------------------------*/
+    /*----------------------------------------------------Attributs global--------------------------------------------------------------*/
 body{
     padding: 0;
     background: none;
@@ -29,7 +28,9 @@ h2{
 }
 
 .entry-content h3{
-    font-size: 26px;
+    font-size: 29px;
+    line-height: 1em;
+    padding-bottom: 20px;
 }
 
 
@@ -39,6 +40,7 @@ h4{
     font-weight: bold;
     line-height: 48px;
     padding-bottom: 30px;
+    text-decoration-line: underline;
 }
 h5{
     text-align: center;
@@ -88,62 +90,7 @@ h5{
 /*
 *     Menu barre de navigation
 */
-#popout {    /* contient le menu mobile et tablette */
-    position: fixed;
-    height: 100%;
-    width: 300px;
-    background: rgba(139, 183, 62, .9);
-    color: white;
-    top: 0;
-    left: -17%;
-    overflow:auto;
-}
 
-#toggle { /* Icon pour la barre de navigation mobile et tablette */
-    display: flex;
-    float: right;
-    position: fixed;
-    top: 10px;
-    right: 44px;
-    width: 28px;
-    height: 24px;   
-    background: #ffffff;
-    box-shadow: 0px 0px 19px 19px rgba(255,255,255,1);
-}
-
-#toggle img{
-    margin: auto;
-}
-#toggle p{
-    color: #000000;
-    padding-right: 10px;
-}
-
-.nav-menu li { /* menu monile et tablette*/
-    border-bottom:1px solid #eee; 
-    padding:20px;
-    width:100%;
-}
-
-.nav-menu li:hover { 
-    color: #000000;
-}
-
-.nav-menu li a { 
-    color:#FFF;
-    text-decoration:none;
-    width:100%;
-}
-
-.nav-menu #contact-mobile{
-    padding-left: 77px;
-    font-size: 14px;
-    border-bottom: none;
-}
-
-.nav-menu #contact-mobile:hover{
-    color: #FFFFFF;
-}
 
 
 #access{
@@ -172,7 +119,7 @@ h5{
 #access ul ul :hover > a,
 #access a:focus {
     color: black;
-    background: rgb(211, 211, 211,0);
+    background: rgba(211, 211, 211,0);
     
 }
 
@@ -254,7 +201,7 @@ h5{
     top: 29%;
     width: 44%;
     height: 50%;
-    background: rgb(211, 211, 211,0.48);
+    background: rgba(211, 211, 211,0.48);
 }
 
 #site-title{
@@ -300,8 +247,9 @@ h5{
 }
 
 #qui-container li{
-    list-style-image: url('http://wordpress.martinwallet.fr/wp-content/themes/twentyelevenumco/img/checked.png');
-    padding: 10px 10px;
+    background: url('http://wordpress.martinwallet.fr/wp-content/themes/twentyelevenumco/img/flèche-liste.png') no-repeat left;
+    padding: 10px 27px;
+    list-style: none;
 }
 
 #qui-container{
@@ -356,7 +304,7 @@ h5{
 
 /* Partie : "Charte de nos valeurs" */
 #charte-container ul{
-    list-style-type: disc;
+    list-style-image: url('http://wordpress.martinwallet.fr/wp-content/themes/twentyelevenumco/img/checked.png');
 }
 
 .charte-list{
@@ -369,6 +317,7 @@ h5{
 /*---------------------------------------------Footer--------------------------------------------------------*/
 
 #site-generator{
+    
     display: flex;
     font-size: 15px;
     justify-content: space-around;
@@ -446,14 +395,15 @@ h5{
 .container-article{
     display: flex;
     flex-flow: row wrap;
+    justify-content: center;
     margin: 0 0 100px 0;
     height: auto;
 }
 
 .container-article h3:nth-child(1){
-    width: 100%;
-    font-size: 26px;
+    width: 85%;
     order: 1;
+    font-weight: bold;
 }
 .container-article img:nth-child(2){
     box-shadow: 0px 0px 39px  rgba(0,0,0,0.40);
@@ -472,15 +422,15 @@ h5{
 .container-article-inverse{
     display: flex;
     flex-flow: row wrap-reverse;
-
+    justify-content: center;
     margin: 0 0 100px 0;
     height: auto;
 }
 
 .container-article-inverse h3:nth-child(1){
-    width: 100%;
-    font-size: 26px;
+    width: 85%;
     order: 3;
+    font-weight: bold;
 }
 .container-article-inverse img:nth-child(2){
     box-shadow: 0px 0px 39px  rgba(0,0,0,0.40);
@@ -516,11 +466,10 @@ h5{
 /*-----------------------------------------------------Page équipe-------------------------------------------*/
 
 .container-equipe{
-    height: 350px;
+    height: 450px;
     display: flex;
     flex-flow: column wrap;
     align-items: center;
-    border-bottom: #D3D3D3 1px solid;
 }
 
 .container-equipe img{
@@ -541,9 +490,7 @@ h5{
 
 
 
-
-
-/*---------------------------------------------------------------------         Media Queries       --------------------------------------------------------------------------------*/
+/*****************************************************************      Media Queries     **********************************************************/
 /* Ajustement en dessous de 1640 px de large */
 
 @media screen and (max-width: 1640px){
@@ -555,26 +502,154 @@ h5{
         width: 100%;
     }
 
-
     /*
-       *   Barre de navigation
-       */
+    *   Barre de navigation
+    */
        
-       #access ul{
-           margin: 0 -7%;
-       }
-       #branding #logo{
-           left: 4%;
-       }
-       #toggle img{
-           height: 20px;
-           width: 20px;
-       }
-   }
+   #access ul{
+        margin: 0 -7%;
+    }
+    #branding #logo{
+        left: 4%;
+    }
+    #toggle img{
+        height: 20px;
+        width: 20px;
+    }
+}
+
+
+/*---------------------------------------------------Partie permettant de cacher la barre de navigation mobile---------------*/
+@media screen and (min-width: 1284px) { 
+    #toggle {
+        display: none;
+    }
+    #popout{
+        display: none;
+    }
+    .nav-menu {
+        display: none;
+    }
+ 
+} 
+
+/*----------------------------------------------------Partie responsive commune à la tablette et au mobile------------------------------*/
+
+@media screen and (max-width: 1284px){
+
+        /*
+        *       Barre de navigation mobile
+        */
+
+        #popout {    /* contient le menu mobile et tablette */
+            position: fixed;
+            height: 100%;
+            width: 300px;
+            background: rgba(139, 183, 62, .9);
+            color: white;
+            top: 0;
+            left: -17%;
+            overflow:auto;
+        }
+        
+        #toggle { /* Icon pour la barre de navigation mobile et tablette */
+            display: flex;
+            float: right;
+            position: fixed;
+            top: 10px;
+            right: 2px;
+            width: 70px;
+            height: 24px;   
+            background: #ffffff;
+            box-shadow: 0px 0px 19px 19px rgba(255,255,255,1);
+        }
+        
+        #toggle img{
+            margin: auto;
+        }
+        #toggle p{
+            color: #7fa739;
+            font-weight: bold;
+        }
+        
+        .nav-menu li { /* menu monile et tablette*/
+            border-bottom:1px solid #eee; 
+            padding:20px;
+            width:100%;
+        }
+        
+        .nav-menu li:hover { 
+            color: #000000;
+        }
+        
+        .nav-menu li a { 
+            color:#FFF;
+            text-decoration:none;
+            width:100%;
+        }
+        
+        .nav-menu #contact-mobile{
+            padding-left: 77px;
+            font-size: 14px;
+            border-bottom: none;
+        }
+        
+        .nav-menu #contact-mobile:hover{
+            color: #FFFFFF;
+        }
+
+        /*
+        *       Footer
+        */
+
+        #site-generator{
+            flex-direction: column;
+        }
+        #site-generator ul{
+            flex-direction: column;
+            margin: 0;
+            width: auto;
+        }
+        
+        #suivez-nous {
+            padding: 30px 0;
+            border-right: none;
+            border-bottom: #FFFFFF 1px solid;
+        }
+        #site-generator #lien-information{
+            padding: 30px 0;
+        }
+        #site-generator #lien-information li{
+            height: auto;
+            padding: 0;
+        }
+
+        #site-generator #lien-site{
+            padding: 30px 0 30px 38px;
+            border-left: none;
+            border-top: #FFFFFF 1px solid;
+        }
+}
+
+
+
    
 /*--------------------------------------------------------Partie responsive pour tablette-----------------------------------------------------*/
 
-@media screen and (max-width: 1284px) and (min-width: 770px){
+@media screen and (max-width: 1284px) and (min-width: 650px){
+    /*
+    *       Titre et sous-titres
+    */
+
+    .entry-content h2{
+        font-size: 30px;
+        margin-bottom: 3em;
+    }
+
+    #site-title{
+        line-height: 49px;
+        font-size: 49px;
+    }
 
     /*
     *       Barre de navigation
@@ -595,6 +670,17 @@ h5{
         width: 320px;
         left: -14%;
     }
+
+    /*
+    *           Titre principal
+    */
+
+    #site-title{
+        font-size: 52px;
+    }
+    #titre-container{
+        width: 62%;
+    }
     
     /*
     *           Page  présentation"
@@ -609,44 +695,74 @@ h5{
     *           Page "article"
     */
 
-    .container-article img:nth-child(2){
-        width: 40vw;
+   .container-article h3:nth-child(1){
+       font-size: 22px;
+   }
+   .container-article p:nth-child(3){
+       width: 82%;
+       font-size: 17px;
+   }
+   .container-article img:nth-child(2){
+        margin: 15px 20px;
+        width: 68vw;
         height: 100%;
     }
 
+    .container-article-inverse h3:nth-child(1){
+        font-size: 22px;
+    }
+   .container-article-inverse p:nth-child(3){
+         width: 82%;
+         font-size: 17px;
+    }
     .container-article-inverse img:nth-child(2){
-        width: 40vw;
+         margin: 15px 20px;
+         width: 68vw;
         height: 100%;
+    }
+    /*
+    *       Conteneur "type de chirurgie"
+    */
+
+    .container-type-operation{
+        height: auto;
+    }
+    .container-type-operation p{
+        padding-bottom: 30px;
     }
 
     /*
-    *           Titre principal
+    *       Page "équipe"
     */
 
-    #site-title{
-        font-size: 52px;
+    .container-equipe{
+        height: auto;
+        margin-bottom: 22%;
     }
-    #titre-container{
-        width: 62%;
+
+    /*
+    *       Footer
+    */
+
+    #site-generator #lien-information{
+        font-size: 22px;
     }
+
+    #site-generator #lien-site{
+        font-size: 18px;
+    }
+
 }
+
+
+
+
 
 /*-------------------------------------------------------------Partie responsive pour mobile-------------------------------------------------*/
 
-   @media screen and (min-width: 1285px) { 
-       #toggle {
-           display: none;
-       }
-       #popout{
-           display: none;
-       }
-       .nav-menu {
-           display: none;
-       }
+   
     
-   } 
-    
-   @media screen and (max-width: 768px) {
+   @media screen and (max-width: 650px) {
 
 
         /*
@@ -681,10 +797,6 @@ h5{
             font-size: 30px;
             padding-bottom: 35px;
         }
-        
-        /*
-        * Image du header
-        */
 
         /*
         *  Barre de navigation
@@ -741,6 +853,10 @@ h5{
        *       Page article
        */
 
+       .container-article{
+            margin-bottom: 80px;
+       }
+
        .container-article h3:nth-child(1){
            font-size: 14px;
        }
@@ -748,10 +864,14 @@ h5{
            width: 100%;
        }
        .container-article img:nth-child(2){
-            margin: 25px 0;
+            margin: 20px 0;
             align-self: flex-end;
         }
 
+
+        .container-article-inverse{
+            margin-bottom: 80px;
+        }
 
         .container-article-inverse h3:nth-child(1){
             font-size: 14px;
@@ -760,7 +880,7 @@ h5{
              width: 100%;
         }
         .container-article-inverse img:nth-child(2){
-             margin: 25px 0;
+             margin: 20px 0;
         }
 
         /*
@@ -787,39 +907,6 @@ h5{
 
         .container-equipe p{
             font-size: 13px;
-            margin-bottom: 40px;
-        }
-
-        /*
-        *       Footer
-        */
-
-        #site-generator{
-            flex-direction: column;
-        }
-        #site-generator ul{
-            flex-direction: column;
-            margin: 0;
-            width: auto;
-        }
-        
-        #suivez-nous {
-            padding: 30px 0;
-            border-right: none;
-            border-bottom: #FFFFFF 1px solid;
-        }
-        #site-generator #lien-information{
-            padding: 30px 0;
-        }
-        #site-generator #lien-information li{
-            height: auto;
-            padding: 0;
-        }
-
-        #site-generator #lien-site{
-            padding: 30px 0 30px 38px;
-            border-left: none;
-            border-top: #FFFFFF 1px solid;
         }
  
         /*
