--- a/wp-content/themes/twentyelevenumco/style.css
+++ b/wp-content/themes/twentyelevenumco/style.css
@@ -7,6 +7,7 @@ Template: twentyeleven
 Version: 0.1.0
 */
 @import url('https://fonts.googleapis.com/css?family=Exo');
+
     /*----------------------------------------------------Attributs global--------------------------------------------------------------*/
 body{
     padding: 0;
@@ -80,9 +81,9 @@ h5{
 
 
 #header_img {
-    height: 50vh;
+    height: 60vh;
     width: 100%;
-    display: flex;
+    display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
  }
 
 
@@ -146,14 +147,14 @@ h5{
 #container-contact{
     position: absolute;
     right: 3%;
-    display: flex;
+    display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     flex-direction: row;
     justify-content: flex-start;
     width: auto;
     height: 40px;
 }
 .contact{
-    display: flex;
+    display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     flex-flow: row nowrap;
     align-items: center;
     height: 40px;
@@ -191,7 +192,7 @@ h5{
 * Titre principal
 */
 #titre-container{
-    display: flex;
+    display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     justify-content: center;
     align-items: center;
     position: absolute;
@@ -253,7 +254,7 @@ h5{
 }
 
 #qui-container{
-    display: flex;
+    display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
@@ -262,13 +263,13 @@ h5{
 
 
 #suivi-container{
-    display: flex;
+    display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
 .suivi-description{
-    display: flex;
+    display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     flex-direction: column;
     align-items: center;
     width: 200px;
@@ -276,7 +277,7 @@ h5{
 
 .suivi-description img{
     border: none;
-    display: flex;
+    display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     margin: 0 auto;
     opacity: 1;
     transition: 0.8s;
@@ -308,7 +309,7 @@ h5{
 }
 
 .charte-list{
-    display: flex;
+    display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     flex-direction: row;
     align-content: flex-start;
 }
@@ -318,7 +319,7 @@ h5{
 
 #site-generator{
     
-    display: flex;
+    display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     font-size: 15px;
     justify-content: space-around;
     align-items: center;
@@ -335,7 +336,7 @@ h5{
 }
 
 #site-generator #lien-information{
-    display: flex;
+    display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     list-style: none;
 }
 
@@ -393,7 +394,7 @@ h5{
 * Conteneur d'un article    ( composé de trois éléments --> Titre , image et texte )
 */
 .container-article{
-    display: flex;
+    display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     flex-flow: row wrap;
     justify-content: center;
     margin: 0 0 100px 0;
@@ -420,7 +421,7 @@ h5{
 */
 
 .container-article-inverse{
-    display: flex;
+    display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     flex-flow: row wrap-reverse;
     justify-content: center;
     margin: 0 0 100px 0;
@@ -449,7 +450,7 @@ h5{
 */
 
 .container-type-operation{
-    display: flex;
+    display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     justify-content: flex-start;
     align-items: center;
     flex-flow: column wrap;
@@ -467,7 +468,7 @@ h5{
 
 .container-equipe{
     height: 450px;
-    display: flex;
+    display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
     flex-flow: column wrap;
     align-items: center;
 }
@@ -520,7 +521,7 @@ h5{
 
 
 /*---------------------------------------------------Partie permettant de cacher la barre de navigation mobile---------------*/
-@media screen and (min-width: 1284px) { 
+@media screen and (min-width: 1300px) { 
     #toggle {
         display: none;
     }
@@ -553,15 +554,15 @@ h5{
         }
         
         #toggle { /* Icon pour la barre de navigation mobile et tablette */
-            display: flex;
+            display: -webkit-box;   display: -webkit-flex;   display: -ms-flexbox;   display: flex;
             float: right;
             position: fixed;
             top: 10px;
             right: 2px;
             width: 70px;
             height: 24px;   
-            background: #ffffff;
-            box-shadow: 0px 0px 19px 19px rgba(255,255,255,1);
+            background: rgba(255, 255, 255,0.7);
+            box-shadow: 0px 0px 19px 19px rgba(255,255,255,0.7);
         }
         
         #toggle img{
@@ -795,7 +796,16 @@ h5{
         h4{
             line-height: 35px;
             font-size: 30px;
-            padding-bottom: 35px;
+            padding-bottom: 0;
+        }
+
+        /*
+        *       Image du header
+        */
+
+        #header_img{
+            height: 30vh;
+            width: 100vw;
         }
 
         /*
@@ -823,7 +833,7 @@ h5{
        }
        #site-title{
            line-height: 33px;
-           font-size: 33px;
+           font-size: 23px;
        }
 
        /*
@@ -859,12 +869,13 @@ h5{
 
        .container-article h3:nth-child(1){
            font-size: 14px;
+           width: 100%;
        }
        .container-article p:nth-child(3){
            width: 100%;
        }
        .container-article img:nth-child(2){
-            margin: 20px 0;
+            margin: 15px 0;
             align-self: flex-end;
         }
 
@@ -875,12 +886,13 @@ h5{
 
         .container-article-inverse h3:nth-child(1){
             font-size: 14px;
+            width: 100%;
         }
        .container-article-inverse p:nth-child(3){
              width: 100%;
         }
         .container-article-inverse img:nth-child(2){
-             margin: 20px 0;
+             margin: 15px 0;
         }
 
         /*
@@ -907,6 +919,9 @@ h5{
 
         .container-equipe p{
             font-size: 13px;
+        }
+        .container-equipe img{
+            margin-top: 40px;
         }
  
         /*
